# ai-crypto-trader

./: .gitignore  README.md  Untitled
backend/: Dockerfile  README.md  alembic.ini  chemaname = public  dev.db  leep 90  pyproject.toml  ql "$PSQL_URL" -c "  recovered.sql
backend/docs/: api_contracts_autopilot.md  openclaw_autopilot_plan.md  ui_autopilot_journey.md
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial.py  0002_fix_paper_tables_id_identity.py  0003_add_admin_actions.py  0004_ensure_admin_actions_table.py  0005_add_risk_and_strategy_configs.py  0006_add_initial_cash_usd_to_paper_accounts.py  0007_set_default_initial_cash_usd.py  0008_add_admin_actions_dedupe_key.py  0009_add_paper_policy_tables.py  0010_add_admin_actions_dedupe_key_created_at_index.py  0011_widen_admin_actions_status.py  0012_add_paper_reconcile_policies.py  0013_add_reconcile_log_window_seconds.py  0014_add_strategy_policy_overrides.py  0015_add_paper_symbol_limits.py  0016_add_order_rate_limits.py  0017_add_equity_snapshot_meta_source.py  0019_add_notifications_outbox.py  (+11 more)
backend/scripts/: phase42_smoke.sh  reconcile_smoke.py
backend/tests/: test_auto_symbol.py  test_autopilot_governor.py  test_autopilot_smoke_trade_precedence.py  test_binance_notional_validation.py  test_execution_positions.py  test_json_safe.py  test_ledger_simulator.py  test_live_exchange_error_classification.py  test_live_exchange_filter_failure.py  test_notifications_dispatcher.py  test_reconcile_positions.py  test_strategy_stalls_env.py  test_strategy_stalls_state_machine.py
(+111 files in other folders)
